...

function labelDelivery(m: string) {
  switch (m) {
    case 'kazpost':
      return 'Казпочта';
    case 'indrive':
      return 'inDrive';
    case 'city':
      return 'Курьер';
    case 'cdek':
      return 'СДЭК';
    default:
      return m || '—';
...
